--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>Ricardo Bobadilla - Título.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>Egresado del Instituto Politécnico Nacional, actualmente me desempeño como Arquitecto de Soluciones de TI y soy co-fundador de Tukiba Technologies</p>
 						<ul class="actions">
-							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
+							<li><a href="https://www.linkedin.com/in/ricardo-bobadilla-villanueva-a1849a72" target="_blank" class="button">Aquí un poco más de mi trabajo.</a></li>
 						</ul>
 					</section>
 
