--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
 								<a href="http://www.novutek.com/yescloud" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
-								<img src="https://pbs.twimg.com/profile_images/803739472357507072/jMbJNB0I_400x400.jpg"/></a>
+								<img src="https://assets.pcmag.com/media/images/417346-back-up-your-cloud-how-to-download-all-your-data.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
 
 							</article>
