--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://pbs.twimg.com/media/C3iwyJiUEAAPOTi.jpg" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://scontent.fmex7-1.fna.fbcdn.net/v/t1.0-9/28577807_10215161339924271_7770350623131697152_n.jpg?_nc_cat=0&_nc_eui2=v1%3AAeEE2I0HW0V7o-6-86rsKvfU8QgdDSYn5KF247ilFsVNMmFb3trgBEGrno8fqr33YYal9WuWUJYsiRPWli3gIqG0fqTjeNzSwQSNFZQTKW5WgQ&oh=0099afb60d9bd59219a767e3c831034c&oe=5B9B210B" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Ricardo Bobadilla</strong>, Ingeniero en comunicaciones y electrónica.<br />
 			</header>
