--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 				<ul class="icons">
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
-					<li><a href="https://www.facebook.com/ricardo.bobadilla.754" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="https://www.facebook.com/richitobv" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 					<li><a href="https://twitter.com/RichiBV" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://medium.com/@ricardobobadilla" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
-     					<li><a href="https://www.linkedin.com/in/ricardo-bobadilla-villanueva-a1849a72" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="https://medium.com/@richibv" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
+     					<li><a href="https://www.linkedin.com/in/richibv" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
           			       <li><a href="https://github.com/RichiBV" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href="mailto:ricardo@bobadilla.me" target="_blank" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
