--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<article class="6u$ 12u$(xsmall) work-item">
 								<h3>Blog en Medium</h3>
 								<p>Escribo sobre desarrollo tecnológico, blockchain, AI y singularidad, física moderna, drones, IoT y emprendimiento.</p>
-								<a href="https://medium.com/@ricardobobadilla" target="_blank" class="image fit thumb">
+								<a href="https://medium.com/@richibv" target="_blank" class="image fit thumb">
                                                      <img src="https://i.blogs.es/fcae2c/medium/original.jpg" alt="" /></a>
 
 							</article>
