--- a/index.html
+++ b/index.html
@@ -124,7 +124,8 @@
 					<!-- Conoce todos los íconos en http://fontawesome.io/icons/ -->
 					<!-- Solamente cambias en class="icon fa-IconoQueTuQuieras" -->
 					<li><a href="https://www.facebook.com/richitobv" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="https://twitter.com/RichiBV" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/richitobv" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>					
+                             <li><a href="https://twitter.com/RichiBV" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://medium.com/@richibv" target="_blank" class="icon fa-medium"><span class="label">Medium</span></a></li>
      					<li><a href="https://www.linkedin.com/in/richibv" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
           			       <li><a href="https://github.com/RichiBV" target="_blank" class="icon fa-github"><span class="label">GitHub</span></a></li>
